Fixed an issue with button clicks on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,8 @@ ul {
   bottom: 8.5rem;
   left: 50%;
   transform: translateX(-50%);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 @media (max-width: 40em) {
   .product-button {
