--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -74,6 +74,8 @@
     bottom: 8.5rem;
     left: 50%;
     transform: translateX(-50%);
+    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
     @include breakpoints-down(small) {
       left: 50%;
